[package]
name = "actix-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
diesel = { version = "2.0.4", features = ["postgres"] }
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.160", features = ["derive"] }
